src/main/java/com/example/DiplomaSite/error/DiplomaAssignmentCreationException.java
package com.example.DiplomaSite.error;

public class DiplomaAssignmentCreationException extends RuntimeException{
    public DiplomaAssignmentCreationException(String message, Throwable cause) {
        super(message, cause);
    }
}
